--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,13 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
+  "configurations": [{
+    "name": "Launch Edge",
+    "request": "launch",
+    "type": "msedge",
+    "url": "http://localhost:4200",
+    "webRoot": "${workspaceFolder}"
+  },
     {
       "name": "ng serve",
       "type": "pwa-chrome",
